# beads-task-issue-tracker

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  flake.nix  nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.claude/: codebase-map.md
.claude/commands/: tracker-cli.md
.github/workflows/: release.yml
app/: app.vue
app/composables/: useAdaptivePolling.ts  useAppMenu.ts  useAttachments.ts  useBackendMode.ts  useBeadsPath.ts  useBeadsWatcher.ts  useChangeDetection.ts  useCliClient.ts  useCollapsible.ts  useColumnConfig.ts  useConflicts.ts  useDashboard.ts  useExclusionFilters.ts  useFavorites.ts  useFilters.ts  useImagePreview.ts  useIssueDialogs.ts  useIssues.ts  useKeyboardNavigation.ts  useLocalStorage.ts  useMarkdownPreview.ts  useMigrateRefs.ts  useMigrateToDolt.ts  useNotification.ts  usePinnedIssues.ts  usePipelineDiagnostics.ts  usePollScheduler.ts  useProjectStorage.ts  useRepairDatabase.ts  useSidebarResize.ts  useSyncStatus.ts  useTauriWindow.ts  useTheme.ts  useUpdateChecker.ts  useZoom.ts
app/pages/: index.vue
app/plugins/: console-to-log.client.ts
app/types/: issue.ts
docs/: attachments.md  churn-stress-runbook.md  dolt-migration.md  philosophy.md
scripts/: churn-stress.sh  sync-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/tracker/: agents_template.md  config.rs  conflicts.rs  convert.rs  db.rs  export.rs  ids.rs  import.rs  issues.rs  migrate.rs  mod.rs  search.rs  sync.rs
(+101 files in other folders)
