[package]
name = "beads-issue-tracker"
version = "1.18.4"
description = "Beads Task-Issue Tracker - Desktop app for managing bd Beads issues"
authors = ["Laurent Chapin <laurent.chapin@w3dev.fr>"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
dirs = "6.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
notify = "7.0"
notify-debouncer-mini = "0.5"
